src/assets/scss/_global.scss
@import "variables";

@media (any-hover: hover) {
  a:hover {
    opacity: .7;
  }
  .swiper-button-prev:hover, .swiper-button-next:hover {
    color: $primaryColor !important;
  }
  .btn:hover {
    background: $secondaryColor;
    color:      $white;
    opacity:    1;
  }
}

* {
  outline:     none;
  box-sizing:  border-box;
  margin:      0;
  padding:     0;
  font-family: 'Apercu', sans-serif; // TODO: for example
  transition:  all linear 0.3s;
  color:       $black;
}

html,
body {
  height: 100%;
  width:  100%;
}

body {
  display:        flex;
  flex-direction: column;
  min-height:     100%;
  font-size:      16px;
}

main {
  flex:     1 0 auto;
  position: relative;
}

section {
  position: relative;
}

a {
  text-decoration: none;
  cursor:          pointer;
  &:active {
    opacity: .7;
  }
}

ul {
  list-style: none;
}

img {
  width:   100%;
  display: flex;
}

h1 {
  font-size:   4.3125rem;
  font-weight: 600;
}

h2 {
  font-size:   3rem;
  font-weight: 600;
  text-align:  center;
}

h3 {
  font-size:   2.8125rem;
  font-weight: 600;
}

h4 {
  font-size:   2.625rem;
  font-weight: 600;
}

h5 {
  font-size:   1.75rem;
  font-weight: 500;
}

h6 {
  font-size:   1.625rem;
  font-weight: 500;
}

p {
  font-size:   1.25rem;
  font-weight: 400;
  line-height: 1.5;
}

span {
  color: $primaryColor;
}

.btn {
  position:      relative;
  display:       inline-block;
  color:         $black;
  background:    $primaryColor;
  padding:       22px 21px;
  border-radius: 5px;
  font-size:     1.5rem;
  font-weight:   600;
  &:active {
    top: 3px;
  }
}

.socials {
  position:        fixed;
  top:             38%;
  right:           3%;
  display:         flex;
  flex-direction:  column;
  justify-content: center;
  width:           4%;
  z-index:         100;
  a {
    cursor:        pointer;
    margin-bottom: 34%;
    &:last-child {
      margin-bottom: 0;
    }
  }
}

.footer {
  flex: 0 0 auto;
}

.d-none {
  display: none !important;
}

.container {
  width:     100%;
  max-width: 1620px;
  padding:   0 15px;
  margin:    0 auto;
  position:  relative;
}

button {
  border: none;
  cursor: pointer;
}

.swiper-button-prev, .swiper-button-next {
  color: $secondaryColor !important;
}


@media screen and (max-width: 991.98px) {

}

@media screen and (max-width: 567px) {

}

